--- a/app/src/main/res/layout/main_keyboard_frame.xml
+++ b/app/src/main/res/layout/main_keyboard_frame.xml
@@ -36,6 +36,10 @@
             android:id="@+id/clipboard_history_view"
             layout="@layout/clipboard_history_view" />
 
+        <include
+            android:id="@+id/ai_main_view"
+            layout="@layout/ai_main_view" />
+
         <ImageButton
             android:id="@+id/btn_stop_one_handed_mode"
             android:contentDescription="@string/label_stop_onehanded_mode_key"
