--- a/app/src/main/res/values/platform-theme.xml
+++ b/app/src/main/res/values/platform-theme.xml
@@ -25,7 +25,7 @@
         <item name="android:colorForeground">@color/foreground</item>
     </style>
 
-    <style name="LoginActivityTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
+    <style name="LoginActivityTheme" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="colorPrimary">@color/accent</item>
         <item name="colorPrimaryDark">@color/action_bar_color</item>
         <item name="colorAccent">@color/accent</item>
