--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -75,5 +75,6 @@
     <color name="toolbar_scrollbar">#66808080</color>
 
     <color name="text_primary">#000</color>
+    <color name="text_secondary">#8A8A8A</color>
 
 </resources>
