--- a/app/src/main/res/drawable/ic_polish.xml
+++ b/app/src/main/res/drawable/ic_polish.xml
@@ -3,7 +3,17 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
+
     <path
-        android:fillColor="#FFFFFFFF"
-        android:pathData="M5,3l2,5l5,2l-5,2l-2,5l-2,-5l-5,-2l5,-2z"/>
+        android:fillColor="@android:color/white"
+        android:pathData="
+            M12,2
+            L14.5,9.5
+            L22,12
+            L14.5,14.5
+            L12,22
+            L9.5,14.5
+            L2,12
+            L9.5,9.5
+            Z"/>
 </vector>
