--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,7 @@
 -->
 <resources>
     <dimen name="settings_screen_icon_inset">16dp</dimen>
+    <dimen name="ai_keyboard_extra_height">48dp</dimen>
+    <dimen name="ai_keyboard_suggestion_height">40dp</dimen>
+
 </resources>
